--- a/survey/index.html
+++ b/survey/index.html
@@ -555,7 +555,228 @@
  </div>
 </div>     
 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Depth-attentional Features for Single-image Rain Removal
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Hu_Depth-Attentional_Features_for_Single-Image_Rain_Removal_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/xw-hu/DAF-Net" target="_blank" rel="noopener">DAF-Net Code</a>
+  </p>
+ </div>
+</div>   
 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Dual Residual Networks Leveraging the Potential of Paired Operations for Image Restoration
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Dual_Residual_Networks_Leveraging_the_Potential_of_Paired_Operations_for_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/liu-vis/DualResidualNetworks" target="_blank" rel="noopener">DualResidualNet Code</a>
+  </p>
+ </div>
+</div>     
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Heavy Rain Image Restoration: Integrating Physics Model and Conditional Adversarial Learning
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Li_Heavy_Rain_Image_Restoration_Integrating_Physics_Model_and_Conditional_Adversarial_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/liruoteng/HeavyRainRemoval" target="_blank" rel="noopener">HeavyRainRemoval Code</a>
+  </p>
+ </div>
+</div>      
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Semi-supervised Transfer Learning for Image Rain Removal
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Wei_Semi-Supervised_Transfer_Learning_for_Image_Rain_Removal_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/wwzjer/Semi-supervised-IRR" target="_blank" rel="noopener">SIRR Code</a>
+  </p>
+ </div>
+</div>     
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Spatial Attentive Single-Image Deraining with a High Quality Real Rain Dataset
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Spatial_Attentive_Single-Image_Deraining_With_a_High_Quality_Real_Rain_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/stevewongv/SPANet" target="_blank" rel="noopener">SPANet Code</a>
+  </p>
+ </div>
+</div>    
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Uncertainty Guided Multi-Scale Residual Learning-using a Cycle Spinning CNN for Single Image De-Raining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Yasarla_Uncertainty_Guided_Multi-Scale_Residual_Learning-Using_a_Cycle_Spinning_CNN_for_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/rajeevyasarla/UMRL--using-Cycle-Spinning" target="_blank" rel="noopener">UMRL Code</a>
+  </p>
+ </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    ERL-Net: Entangled Representation Learning for Single Image De-Raining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_ICCV_2019/papers/Wang_ERL-Net_Entangled_Representation_Learning_for_Single_Image_De-Raining_ICCV_2019_paper.pdf" target="_blank" rel="noopener">ICCV'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/RobinCSIRO/ERL-Net-for-Single-Image-Deraining" target="_blank" rel="noopener">ERL-Net Code</a>
+  </p>
+ </div>
+</div>  
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Deep Learning for Seeing Through Window With Raindrops
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_ICCV_2019/papers/Quan_Deep_Learning_for_Seeing_Through_Window_With_Raindrops_ICCV_2019_paper.pdf" target="_blank" rel="noopener">ICCV'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/jackiesdd/raindropAttention" target="_blank" rel="noopener">RaindropAttention Code</a>
+  </p>
+ </div>
+</div>   
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    DTDN: Dual-task De-raining Network
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/2008.09326.pdf" target="_blank" rel="noopener">ACM MM'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/long-username/DTDN-DTDN-Dual-task-De-raining-Network" target="_blank" rel="noopener">DTDN Code</a>
+  </p>
+ </div>
+</div>     
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Gradual Network for Single Image De-raining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/1909.09677.pdf" target="_blank" rel="noopener">ACM MM'19</a>
+  </p>
+ </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Single Image Deraining via Recurrent Hierarchy Enhancement Network
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.researchgate.net/profile/Youzhao-Yang/publication/336713626_Single_Image_Deraining_via_Recurrent_Hierarchy_Enhancement_Network/links/5e7d8286a6fdcc139c08f1a8/Single-Image-Deraining-via-Recurrent-Hierarchy-Enhancement-Network.pdf" target="_blank" rel="noopener">ACM MM'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/nnUyi/ReHEN" target="_blank" rel="noopener">ReHEN Code</a>
+  </p>
+ </div>
+</div>  
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Singe Image Rain Removal with Unpaired Information: A Differentiable Programming Perspective
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ojs.aaai.org/index.php/AAAI/article/view/4971/4844" target="_blank" rel="noopener">AAAI'19</a>
+  </p>
+ </div>
+</div> 
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Image De-raining Using a Conditional Generative Adversarial Network
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/8727938/" target="_blank" rel="noopener">TCSVT'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/hezhangsprinter/ID-CGAN" target="_blank" rel="noopener">ID-CGAN Code</a>
+  </p>
+ </div>
+</div>   
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Lightweight Pyramid Networks for Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/8767931" target="_blank" rel="noopener">TNNLS'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://xueyangfu.github.io/projects/LPNet.html" target="_blank" rel="noopener">LPNet Code</a>
+  </p>
+ </div>
+</div>     
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Joint Rain Detection and Removal from a Single Image with Contextualized Deep Networks
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/8627954" target="_blank" rel="noopener">TPAMI'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/flyywh/JORDER-E-Deep-Image-Deraining-TPAMI-2019-Journal" target="_blank" rel="noopener">JORDER-E Code</a>
+  </p>
+ </div>
+</div>   
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Gated Context Aggregation Network for Image Dehazing and Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/1811.08747.pdf" target="_blank" rel="noopener">WACV'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cddlyf/GCANet" target="_blank" rel="noopener">GCANet Code</a>
+  </p>
+ </div>
+</div>     
+  
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2018">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
