--- a/survey/index.html
+++ b/survey/index.html
@@ -167,7 +167,8 @@
   
 <!-- publications -->
 <div class="universal-wrapper pt-3">
-  <h1>Publications</h1> <p>[<b><a href="../index.html">Go back to the Home page</a></b>]</p>
+  <h1>Publications</h1>
+  <p><a href="../index.html">Go back to the Home page</a></p>
 
 </div>
 
