--- a/survey/index.html
+++ b/survey/index.html
@@ -162,17 +162,16 @@
 
   </div>
 
- 
 
-  
 <!-- publications -->
 <div class="universal-wrapper pt-3">
   <h1>Publications</h1>
-  <p><a href="../index.html">Go back to the Home page</a></p>
-
 </div>
 
-
+<div class="page-body">
+  <div class="universal-wrapper pt-3">
+    <p>[<b><a href="../index.html">Go back to the Home page</a></b>]</p>
+  </div>    
 
 <div class="universal-wrapper">
   <div class="row">
