--- a/survey/index.html
+++ b/survey/index.html
@@ -169,7 +169,7 @@
   
 <!-- publications -->
 <div class="universal-wrapper pt-3">
-  <h1>Publications</h1>
+  <h1>Related Work</h1>
 </div>
 
 <div class="universal-wrapper">
