--- a/survey/index.html
+++ b/survey/index.html
@@ -694,6 +694,19 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
+    Image De-raining via Continual Learning
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://openaccess.thecvf.com/content/CVPR2021/papers/Zhou_Image_De-Raining_via_Continual_Learning_CVPR_2021_paper.pdf" target="_blank" rel="noopener">CVPR'21</a>
+  </p>
+ </div>
+</div>  
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
     From Rain Generation to Rain Removal
    </span>
   <p> 
@@ -715,6 +728,19 @@
   </p>
  </div>
 </div>
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Improving De-raining Generalization via Neural Reorganization
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/ICCV2021/papers/Xiao_Improving_De-Raining_Generalization_via_Neural_Reorganization_ICCV_2021_paper.pdf" target="_blank" rel="noopener">ICCV'21</a>
+  </p>
+ </div>
+</div>  
   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
@@ -977,6 +1003,33 @@
  </div>
 </div>   
   
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2020">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+  Single Image Deraining: From Model-Based to Data-Driven and Beyond 
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/9096521/" target="_blank" rel="noopener">TPAMI'20</a>
+  </p>
+ </div>
+</div>   
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Single Image Deraining: A Comprehensive Benchmark Analysis
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Li_Single_Image_Deraining_A_Comprehensive_Benchmark_Analysis_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/panda-lab/Single-Image-Deraining" target="_blank" rel="noopener">Code</a>
+  </p>
+ </div>
+</div>  
+   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
