--- a/survey/index.html
+++ b/survey/index.html
@@ -523,6 +523,19 @@
   </p>
  </div>
 </div>   
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Memory Uncertainty Learning for Real-World Single Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/9789487" target="_blank" rel="noopener">TPAMI'22</a>
+  </p>
+ </div>
+</div>  
   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
