--- a/survey/index.html
+++ b/survey/index.html
@@ -335,6 +335,20 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
+    Stochastic Window Transformer for Image Restoration
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://proceedings.neurips.cc/paper_files/paper/2022/file/3ca6d336ddaa316a6ae953a20b9477cf-Paper-Conference.pdf" target="_blank" rel="noopener">NeurIPS'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/jiexiaou/Stoformer" target="_blank" rel="noopener">Stoformer Code</a>
+  </p>
+ </div>
+</div>     
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
     Magic ELF: Image Deraining Meets Association Learning and Transformer
    </span>
   <p> 
@@ -578,6 +592,20 @@
  </div>
 </div>
 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Unfolding Taylor's Approximations for Image Restoration
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://papers.nips.cc/paper/2021/file/9e3cfc48eccf81a0d57663e129aef3cb-Paper.pdf" target="_blank" rel="noopener">NeurIPS'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/manman1995/Unfolding-Taylor-s-Approximations-for-Image-Restoration" target="_blank" rel="noopener">Code</a>
+  </p>
+ </div>
+</div>      
+  
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
