--- a/survey/index.html
+++ b/survey/index.html
@@ -269,11 +269,25 @@
     Learning A Sparse Transformer Network for Effective Image Deraining
    </span>
   <p> 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.11950" target="_blank" rel="noopener">CVPR'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Chen_Learning_a_Sparse_Transformer_Network_for_Effective_Image_Deraining_CVPR_2023_paper.pdf" target="_blank" rel="noopener">CVPR'23</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/DRSformer" target="_blank" rel="noopener">DRSformer Code</a>
   </p>
  </div>
 </div>
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    SmartAssign: Learning a Smart Knowledge Assignment Strategy for Deraining and Desnowing
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wang_SmartAssign_Learning_a_Smart_Knowledge_Assignment_Strategy_for_Deraining_and_CVPR_2023_paper.pdf" target="_blank" rel="noopener">CVPR'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://gitee.com/mindspore/models/tree/master/research/cv/SmartAssign" target="_blank" rel="noopener">SmartAssign Code</a>
+  </p>
+ </div>
+</div>  
   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2023">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
@@ -739,6 +753,7 @@
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="http://openaccess.thecvf.com/content/CVPR2021/papers/Zhou_Image_De-Raining_via_Continual_Learning_CVPR_2021_paper.pdf" target="_blank" rel="noopener">CVPR'21</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://xueyangfu.github.io/paper/2021/CVPR2021_code.zip" target="_blank" rel="noopener">Code</a>
   </p>
  </div>
 </div>  
