--- a/survey/index.html
+++ b/survey/index.html
@@ -288,6 +288,32 @@
   </p>
  </div>
 </div>  
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Learning Weather-General and Weather-Specific Features for Image Restoration Under Multiple Adverse Weather Conditions
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Zhu_Learning_Weather-General_and_Weather-Specific_Features_for_Image_Restoration_Under_Multiple_CVPR_2023_paper.pdf" target="_blank" rel="noopener">CVPR'23</a>
+  </p>
+ </div>
+</div>   
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Ingredient-oriented Multi-Degradation Learning for Image Restoration
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Zhang_Ingredient-Oriented_Multi-Degradation_Learning_for_Image_Restoration_CVPR_2023_paper.pdf" target="_blank" rel="noopener">CVPR'23</a>
+  </p>
+ </div>
+</div>     
   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2023">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
