--- a/benchmark.html
+++ b/benchmark.html
@@ -180,7 +180,7 @@
 			</p>
 
 
-			<h2>Results of denoising in raw-RGB space</h2>
+			<h2>Results of mixed training track</h2>
 
 			<table id="t01" class="sortable">
 			<tbody>
@@ -220,7 +220,7 @@
 			<tr>
 				<td>Inputs</td>
 				<td>22.54</td>
-				<td>0.6863</td>
+				<td>0.686</td>
 				<td>13.55</td>
 				<td>0.378</td>
 				<td>26.90</td>
@@ -248,7 +248,7 @@
 				<td>0.796</td>
 			</tr>
 			<tr>
-				<td>SEMI</td>
+				<td>SIRR</td>
 				<td>22.35</td>
 				<td>0.788</td>
 				<td>16.56</td>
@@ -274,7 +274,7 @@
 				<td>0.867</td>
 				<td>29.95</td>
 				<td>0.901</td>
-				<td>24.64</td>
+				<td>24.58</td>
 				<td>0.770</td>
 			</tr>
 			<tr>
@@ -305,7 +305,7 @@
 				<td>30.51</td>
 				<td>0.882</td>
 				<td>28.59</td>
-				<td>0.858</td>
+				<td>0.857</td>
 			</tr>
 			<tr>
 				<td>PReNet</td>
@@ -319,7 +319,7 @@
 				<td>0.916</td>
 				<td>31.36</td>
 				<td>0.911</td>
-				<td>29.43</td>
+				<td>29.42</td>
 				<td>0.897</td>
 			</tr>
 			<tr>
@@ -353,6 +353,21 @@
 				<td>0.921</td>
 			</tr>
 			<tr>
+				<td>HINet</td>
+				<td>30.26</td>
+				<td>0.905</td>
+				<td>30.63</td>
+				<td>0.893</td>
+				<td>37.20</td>
+				<td>0.969</td>
+				<td>33.87</td>
+				<td>0.940</td>
+				<td>33.01</td>
+				<td>0.918</td>
+				<td>33.00</td>
+				<td>0.925</td>
+			</tr>
+			<tr>
 				<td>SPAIR</td>
 				<td>30.35</td>
 				<td>0.909</td>
@@ -364,7 +379,7 @@
 				<td>0.936</td>
 				<td>33.04</td>
 				<td>0.922</td>
-				<td>32.92</td>
+				<td>32.91</td>
 				<td>0.926</td>
 			</tr>
 			<tr>
@@ -380,7 +395,7 @@
 				<td>32.81</td>
 				<td>0.918</td>
 				<td>32.81</td>
-				<td>0.926</td>
+				<td>0.929</td>
 			</tr>
 			<tr>
 				<td>DGUNet</td>
@@ -409,7 +424,7 @@
 				<td>0.942</td>
 				<td>33.08</td>
 				<td>0.916</td>
-				<td>33.45</td>
+				<td>33.46</td>
 				<td>0.927</td>
 			</tr>
 			<tr>
@@ -442,6 +457,527 @@
 				<td>33.96</td>
 				<td>0.935</td>
 			</tr>
+
+			</tbody>
+			</table>
+
+
+
+			<h2>Results of independent training track</h2>
+
+			<table id="t01" class="sortable">
+			<tbody>
+
+			<tr>
+			<th rowspan="2" onclick="sortTable(event, 't01', 0)">Method</th>
+			<th style="text-align: center;" colspan="2">Rain200L</th>
+			<th style="text-align: center;" colspan="2">Rain200H</th>
+			<th style="text-align: center;" colspan="2">Test1200</th>
+			<th style="text-align: center;" colspan="2">Test1400</th>
+			<th style="text-align: center;" colspan="2">Test1000</th>
+			<th style="text-align: center;" colspan="2">Average</th>
+			</tr>
+
+			<!-- <tr>
+			<th style="text-align: center;" colspan="2">(Applied on/Evaluated on)</th>
+			<th style="text-align: center;" colspan="2">(Applied on/Evaluated on)</th>
+			<th style="text-align: center;" colspan="1">(seconds)</th>
+			</tr> -->
+
+			<tr>
+			<th class="sortable desc"   onclick="sortTable(event, 't01', 1)">PSNR</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 2)">SSIM</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 3)">PSNR</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 4)">SSIM</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 5)">PSNR</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 6)">SSIM</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 7)">PSNR</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 8)">SSIM</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 9)">PSNR</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 10)">SSIM</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 11)">PSNR</th>
+			<th class="sortable"   onclick="sortTable(event, 't01', 12)">SSIM</th>
+			<!-- <th class="sortable"   onclick="sortTable(event, 't01', 5)">Raw</th> -->
+			</tr>
+
+			<tr>
+				<td>Inputs</td>
+				<td>26.71</td>
+				<td>0.8438</td>
+				<td>13.08</td>
+				<td>0.3734</td>
+				<td>23.64</td>
+				<td>0.7794</td>
+				<td>25.24</td>
+				<td>0.8098</td>
+				<td>34.14</td>
+				<td>0.9415</td>
+				<td>24.56</td>
+				<td>0.7496</td>
+			</tr>
+			<tr>
+				<td>DDN</td>
+				<td>34.68</td>
+				<td>0.9671</td>
+				<td>26.05</td>
+				<td>0.8056</td>
+				<td>30.97</td>
+				<td>0.9116</td>
+				<td>30.00</td>
+				<td>0.9041</td>
+				<td>36.16</td>
+				<td>0.9457</td>
+				<td>31.57</td>
+				<td>0.9068</td>
+			</tr>
+			<tr>
+				<td>DID-MDN</td>
+				<td>35.40</td>
+				<td>0.9618</td>
+				<td>26.61</td>
+				<td>0.8242</td>
+				<td>31.30</td>
+				<td>0.9207</td>
+				<td>31.49</td>
+				<td>0.9146</td>
+				<td>38.16</td>
+				<td>0.9763</td>
+				<td>32.59</td>
+				<td>0.9195</td>
+			</tr>
+			<tr>
+				<td>RESCAN</td>
+				<td>36.09</td>
+				<td>0.9697</td>
+				<td>26.75</td>
+				<td>0.8353</td>
+				<td>33.38</td>
+				<td>0.9417</td>
+				<td>31.94</td>
+				<td>0.9345</td>
+				<td>38.11</td>
+				<td>0.9707</td>
+				<td>33.25</td>
+				<td>0.9304</td>
+			</tr>
+			<tr>
+				<td>NLEDN</td>
+				<td>39.13</td>
+				<td>0.9821</td>
+				<td>29.79</td>
+				<td>0.9005</td>
+				<td>34.68</td>
+				<td>0.9583</td>
+				<td>32.15</td>
+				<td>0.9398</td>
+				<td>42.97</td>
+				<td>0.9835</td>
+				<td>35.74</td>
+				<td>0.9528</td>
+			</tr>
+			<tr>
+				<td>JORDER-E</td>
+				<td>37.25</td>
+				<td>0.9752</td>
+				<td>29.35</td>
+				<td>0.8905</td>
+				<td>33.98</td>
+				<td>0.9502</td>
+				<td>32.01</td>
+				<td>0.9321</td>
+				<td>40.78</td>
+				<td>0.9801</td>
+				<td>34.67</td>
+				<td>0.9456</td>
+			</tr>
+			<tr>
+				<td>ID-CGAN</td>
+				<td>35.19</td>
+				<td>0.9694</td>
+				<td>25.02</td>
+				<td>0.8430</td>
+				<td>30.25</td>
+				<td>0.9217</td>
+				<td>29.06</td>
+				<td>0.9162</td>
+				<td>38.47</td>
+				<td>0.9624</td>
+				<td>31.59</td>
+				<td>0.9225</td>
+			</tr>
+			<tr>
+				<td>SIRR</td>
+				<td>34.75</td>
+				<td>0.9690</td>
+				<td>26.55</td>
+				<td>0.8190</td>
+				<td>30.57</td>
+				<td>0.9104</td>
+				<td>30.01</td>
+				<td>0.9078</td>
+				<td>35.31</td>
+				<td>0.9411</td>
+				<td>31.43</td>
+				<td>0.9095</td>
+			</tr>
+			<tr>
+				<td>PReNet</td>
+				<td>37.80</td>
+				<td>0.9814</td>
+				<td>29.04</td>
+				<td>0.8991</td>
+				<td>33.17</td>
+				<td>0.9481</td>
+				<td>32.60</td>
+				<td>0.9459</td>
+				<td>40.16</td>
+				<td>0.9816</td>
+				<td>34.55</td>
+				<td>0.9512</td>
+			</tr>
+			<tr>
+				<td>SPANet</td>
+				<td>35.79</td>
+				<td>0.9653</td>
+				<td>26.27</td>
+				<td>0.8666</td>
+				<td>33.04</td>
+				<td>0.9489</td>
+				<td>29.85</td>
+				<td>0.9117</td>
+				<td>40.24</td>
+				<td>0.9811</td>
+				<td>33.03</td>
+				<td>0.9347</td>
+			</tr>
+			<tr>
+				<td>FBL</td>
+				<td>39.02</td>
+				<td>0.9827</td>
+				<td>30.07</td>
+				<td>0.9021</td>
+				<td>34.26</td>
+				<td>0.9320</td>
+				<td>33.05</td>
+				<td>0.9334</td>
+				<td>42.80</td>
+				<td>0.9824</td>
+				<td>35.84</td>
+				<td>0.9465</td>
+			</tr>
+			<tr>
+				<td>MSPFN</td>
+				<td>38.58</td>
+				<td>0.9827</td>
+				<td>29.36</td>
+				<td>0.9034</td>
+				<td>33.72</td>
+				<td>0.9550</td>
+				<td>32.99</td>
+				<td>0.9333</td>
+				<td>43.43</td>
+				<td>0.9843</td>
+				<td>35.61</td>
+				<td>0.9517</td>
+			</tr>
+			<tr>
+				<td>RCDNet</td>
+				<td>39.17</td>
+				<td>0.9885</td>
+				<td>30.24</td>
+				<td>0.9048</td>
+				<td>34.08</td>
+				<td>0.9532</td>
+				<td>33.04</td>
+				<td>0.9472</td>
+				<td>43.36</td>
+				<td>0.9831</td>
+				<td>35.97</td>
+				<td>0.9554</td>
+			</tr>
+			<tr>
+				<td>Syn2Real</td>
+				<td>35.92</td>
+				<td>0.9709</td>
+				<td>27.90</td>
+				<td>0.8605</td>
+				<td>32.39</td>
+				<td>0.9390</td>
+				<td>29.29</td>
+				<td>0.9057</td>
+				<td>35.28</td>
+				<td>0.9745</td>
+				<td>32.15</td>
+				<td>0.9301</td>
+			</tr>
+			<tr>
+				<td>SGCN</td>
+				<td>37.95</td>
+				<td>0.9822</td>
+				<td>29.35</td>
+				<td>0.9055</td>
+				<td>33.58</td>
+				<td>0.9477</td>
+				<td>32.14</td>
+				<td>0.9364</td>
+				<td>43.84</td>
+				<td>0.9862</td>
+				<td>35.37</td>
+				<td>0.9516</td>
+			</tr>
+			<tr>
+				<td>MPRNet</td>
+				<td>39.47</td>
+				<td>0.9825</td>
+				<td>30.67</td>
+				<td>0.9110</td>
+				<td>33.99</td>
+				<td>0.9590</td>
+				<td>33.10</td>
+				<td>0.9347</td>
+				<td>43.64</td>
+				<td>0.9844</td>
+				<td>36.17</td>
+				<td>0.9543</td>
+			</tr>
+			<tr>
+				<td>DualGCN</td>
+				<td>40.73</td>
+				<td>0.9886</td>
+				<td>31.15</td>
+				<td>0.9125</td>
+				<td>34.37</td>
+				<td>0.9620</td>
+				<td>33.01</td>
+				<td>0.9489</td>
+				<td>44.18</td>
+				<td>0.9902</td>
+				<td>36.68</td>
+				<td>0.9604</td>
+			</tr>
+			<tr>
+				<td>SPDNet</td>
+				<td>40.50</td>
+				<td>0.9875</td>
+				<td>31.28</td>
+				<td>0.9207</td>
+				<td>34.57</td>
+				<td>0.9560</td>
+				<td>33.15</td>
+				<td>0.9457</td>
+				<td>43.20</td>
+				<td>0.9871</td>
+				<td>36.54</td>
+				<td>0.9594</td>
+			</tr>
+			<tr>
+				<td>Uformer</td>
+				<td>40.20</td>
+				<td>0.9860</td>
+				<td>30.80</td>
+				<td>0.9105</td>
+				<td>35.02</td>
+				<td>0.9621</td>
+				<td>33.95</td>
+				<td>0.9545</td>
+				<td>46.13</td>
+				<td>0.9913</td>
+				<td>37.22</td>
+				<td>0.9609</td>
+			</tr>
+			<tr>
+				<td>Restormer</td>
+				<td>40.99</td>
+				<td>0.9890</td>
+				<td>32.00</td>
+				<td>0.9329</td>
+				<td>35.29</td>
+				<td>0.9641</td>
+				<td>34.20</td>
+				<td>0.9571</td>
+				<td>47.98</td>
+				<td>0.9921</td>
+				<td>38.09</td>
+				<td>0.9670</td>
+			</tr>
+			<tr>
+				<td>IDT</td>
+				<td>40.74</td>
+				<td>0.9884</td>
+				<td>32.10</td>
+				<td>0.9344</td>
+				<td>34.89</td>
+				<td>0.9623</td>
+				<td>33.84</td>
+				<td>0.9549</td>
+				<td>47.35</td>
+				<td>0.9930</td>
+				<td>37.78</td>
+				<td>0.9666</td>
+			</tr>
+			<tr>
+				<td>HCN</td>
+				<td>41.31</td>
+				<td>0.9892</td>
+				<td>31.34</td>
+				<td>0.9248</td>
+				<td>34.70</td>
+				<td>0.9613</td>
+				<td>33.42</td>
+				<td>0.9512</td>
+				<td>45.03</td>
+				<td>0.9907</td>
+				<td>37.16</td>
+				<td>0.9676</td>
+			</tr>
+			<tr>
+				<td>DRSformer</td>
+				<td>41.23</td>
+				<td>0.9894</td>
+				<td>32.17</td>
+				<td>0.9326</td>
+				<td>35.35</td>
+				<td>0.9646</td>
+				<td>34.35</td>
+				<td>0.9588</td>
+				<td>48.54</td>
+				<td>0.9924</td>
+				<td>38.32</td>
+				<td>0.9676</td>
+			</tr>
+
+			</tbody>
+			</table>
+
+			<h2>Results of new benchmark track</h2>
+
+			<table id="t01" class="sortable">
+			<tbody>
+
+			<tr>
+				<th rowspan="2" onclick="sortTable(event, 't01', 0)">Method</th>
+				<th style="text-align: center;" colspan="3">HQ-RAIN</th>
+				<th style="text-align: center;" colspan="3">RE-RAIN</th>
+				<!-- <th style="text-align: center;" colspan="2">Rain100L</th>
+				<th style="text-align: center;" colspan="2">Test2800</th>
+				<th style="text-align: center;" colspan="2">Test1200</th>
+				<th style="text-align: center;" colspan="2">Average</th> -->
+				</tr>
+	
+				<!-- <tr>
+				<th style="text-align: center;" colspan="2">(Applied on/Evaluated on)</th>
+				<th style="text-align: center;" colspan="2">(Applied on/Evaluated on)</th>
+				<th style="text-align: center;" colspan="1">(seconds)</th>
+				</tr> -->
+	
+				<tr>
+				<th class="sortable desc"   onclick="sortTable(event, 't01', 1)">PSNR</th>
+				<th class="sortable"   onclick="sortTable(event, 't01', 2)">SSIM</th>
+				<th class="sortable"   onclick="sortTable(event, 't01', 3)">LPIPS</th>
+				<th class="sortable"   onclick="sortTable(event, 't01', 4)">NIQE</th>
+				<th class="sortable"   onclick="sortTable(event, 't01', 5)">PIQE</th>
+				<th class="sortable"   onclick="sortTable(event, 't01', 6)">BRISQUE</th>
+			</tr>
+			<tr>
+				<td>Inputs</td>
+				<td>24.06</td>
+				<td>0.7061</td>
+				<td>0.3717</td>
+				<td>5.890</td>
+				<td>13.643</td>
+				<td>30.008</td>
+			</tr>
+			<tr>
+				<td>LPNet</td>
+				<td>31.39</td>
+				<td>0.9203</td>
+				<td>0.1024</td>
+				<td>5.550</td>
+				<td>13.787</td>
+				<td>24.863</td>
+			</tr>
+			<tr>
+				<td>PReNet</td>
+				<td>36.73</td>
+				<td>0.9657</td>
+				<td>0.0350</td>
+				<td>5.619</td>
+				<td>13.324</td>
+				<td>28.180</td>
+			</tr>
+			<tr>
+				<td>JORDER-E</td>
+				<td>36.46</td>
+				<td>0.9599</td>
+				<td>0.0435</td>
+				<td>5.401</td>
+				<td>13.716</td>
+				<td>25.436</td>
+			</tr>
+			<tr>
+				<td>RCDNet</td>
+				<td>39.53</td>
+				<td>0.9771</td>
+				<td>0.0242</td>
+				<td>5.658</td>
+				<td>13.813</td>
+				<td>28.006</td>
+			</tr>
+			<tr>
+				<td>HINet</td>
+				<td>42.30</td>
+				<td>0.9814</td>
+				<td>0.0147</td>
+				<td>5.784</td>
+				<td>13.418</td>
+				<td>29.003</td>
+			</tr>
+			<tr>
+				<td>SPDNet</td>
+				<td>34.02</td>
+				<td>0.9359</td>
+				<td>0.0813</td>
+				<td>5.405</td>
+				<td>14.249</td>
+				<td>26.134</td>
+			</tr>
+			<tr>
+				<td>Uformer</td>
+				<td>37.57</td>
+				<td>0.9673</td>
+				<td>0.0314</td>
+				<td>5.370</td>
+				<td>13.473</td>
+				<td>26.491</td>
+			</tr>
+			<tr>
+				<td>Restormer</td>
+				<td>44.59</td>
+				<td>0.9905</td>
+				<td>0.0076</td>
+				<td>5.864</td>
+				<td>13.623</td>
+				<td>29.725</td>
+			</tr>
+			<tr>
+				<td>IDT</td>
+				<td>38.38</td>
+				<td>0.9737</td>
+				<td>0.0261</td>
+				<td>5.683</td>
+				<td>13.746</td>
+				<td>28.330</td>
+			</tr>
+			<tr>
+				<td>DRSformer</td>
+				<td>44.67</td>
+				<td>0.9898</td>
+				<td>0.0081</td>
+				<td>5.857</td>
+				<td>13.678</td>
+				<td>29.747</td>
+			</tr>
+
 
 			</tbody>
 			</table>
