--- a/survey/index.html
+++ b/survey/index.html
@@ -172,6 +172,10 @@
   <h1>Related Work</h1>
 </div>
 
+<div class="universal-wrapper pt-1">
+ <h3>Note: For the following paper on image restoration, we only include the image restoration work validated on the deraining task in their paper.</h3> 
+</div>
+  
 <div class="universal-wrapper">
   <div class="row">
     <div class="col-lg-12">
