--- a/survey/index.html
+++ b/survey/index.html
@@ -173,7 +173,7 @@
 </div>
 
 <div class="universal-wrapper pt-1">
- <h3>Note: For the following paper on image restoration, we only include the image restoration work validated on the deraining task in their paper.</h3> 
+ <h5>Note: For the following papers on image restoration, we only include the image restoration work validated on the deraining task in their paper. If you would like to add your paper, please contact chenxiang@njust.edu.cn.</h5> 
 </div>
   
 <div class="universal-wrapper">
