--- a/survey/index.html
+++ b/survey/index.html
@@ -169,7 +169,7 @@
   
 <!-- publications -->
 <div class="universal-wrapper pt-3">
-  <h1>Related Work</h1>
+  <h1>Related Work</h1> <h3>Last updated: May 26, 2023</h3>
 </div>
 
 <div class="universal-wrapper pt-1">
