--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div id = "logo" style="margin-top: 10px; text-align:center">
 	    <div align="center" style="margin:auto;padding-top:10px">
             <div style="width:12%">
-				<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=UvAnV6DMvsWrDhyqfAW9pOR-O0NWV6F5XtmusegOD9A&cl=ffffff&w=a"></script>
+				<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=UvAnV6DMvsWrDhyqfAW9pOR-O0NWV6F5XtmusegOD9A'></script>
             </div>
            <br>
             </div>
