--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 		<p>
 		<sup>1</sup><a href="http://eecs.lassonde.yorku.ca/" target="_blank" rel="noopener">Nanjing University of Science and Technology</a>
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 		<sup>2</sup><a href="http://eecs.lassonde.yorku.ca/" target="_blank" rel="noopener">Huawei Cloud</a>		
 		</p>
 		
