--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="entry grey-back" >
 	<i>
 	<p>
-		This survey and the designed online platform could serve as a reference source for future study and promote the development of the community. The proposed platform and the collected methods, datasets, and comparison results are publicly available and will be regularly updated at this website.
+		This designed online platform could serve as a reference source for future study and promote the development of the community. The proposed platform and the collected methods, datasets, and comparison results are publicly available and will be regularly updated at this website.
 	</p>
 	<!--
 	<p>
