--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
 		<div class="entry grey-back" >
 	<i>
 	<p>
-		This designed online platform could serve as a reference source for future study and promote the development of the community. The proposed platform and the collected methods, datasets, and comparison results are publicly available and will be regularly updated at this website.
+		This designed online platform could serve as a reference source for future study and promote the development of the community.
 	</p>
+	<p>
+		The proposed platform and the collected methods, datasets, and comparison results are publicly available and will be regularly updated at this website.
+	</p>		
 	<!--
 	<p>
 		The benchmark is currently hosted here on this website.
