--- a/index.html
+++ b/index.html
@@ -138,15 +138,10 @@
 			<p>The dataset and the associated code repositories are under the MIT License.</p>
 			
 			<h1>Acknowledgment</h1>
-			<p>
-				This work has been partly supported by the National Key R&D Program of China (No. 2018AAA0102001), the National Natural Science Foundation of China (Nos. U22B2049, U19B2040, 61922043, 61872421, 62272230), and the Fundamental Research Funds for the Central Universities (No. 30920041109).
-			</p>
+			<p> Part of the code for this website borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. Thanks to Caihua Kong and Longgang Dai for supporting this project.</p>
 
 			<h1>Contact</h1>
-			<p>
-				For any questions, remarks, or comments, please contact: chenxiang@njust.edu.cn
-			</p>
-
+			<p>For any questions, remarks, comments, or collaborations, please contact: chenxiang@njust.edu.cn.</p>
 
 			<!--<h1>Authors</h1>-->
 
