--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<p>The dataset and the associated code repositories are under the MIT License.</p>
 			
 			<h1>Acknowledgment</h1>
-			<p> Part of the code for this website borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. Thanks to Caihua Kong (LISTENAI) and Longgang Dai (JINGWEI HIRAIN) for supporting this project.</p>
+			<p> Part of the code for this website borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. Thanks to <b>Caihua Kong (LISTENAI)</b> and <b>Longgang Dai (JINGWEI HIRAIN)</b> for supporting this project.</p>
 
 			<h1>Contact</h1>
 			<p>For any questions, remarks, comments, or collaborations, please contact: chenxiang@njust.edu.cn.</p>
