--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
 			</p>
                         -->
 
-			<h1>New</h1>
+			<h1>News</h1>
 			<ul>
-			<li>2023.06.01: The online platform is avaliable.</li>
+			<li>2023.06.10: Welcome VALSE attendees to visit our website.</li>
 			<li>2023.06.01: The online platform is avaliable.</li>
 			</ul>
-			
-			<h1>License</h1>
-			<p>The dataset and the associated code repositories are under the MIT License.</p>
 			
 			<h1>Acknowledgment</h1>
 			<p> Part of the code for this platform borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. Thanks to <b>Caihua Kong (LISTENAI)</b> and <b>Longgang Dai (JINGWEI HIRAIN)</b> for supporting this project.</p>
 
+			<h1>License</h1>
+			<p>The all online resources are under the MIT License.</p>
+			
 			<h1>Contact</h1>
 			<p>For any questions, remarks, comments, or collaborations, please contact: chenxiang@njust.edu.cn.</p>
 
