--- a/submit.html
+++ b/submit.html
@@ -71,8 +71,7 @@
 			
 			<div class="submitForm">
 			<form method="post" enctype="multipart/form-data" action="upload_submission.php">
-                        <p><span class="fieldName">More details are coming soon!</span>
-				</p>
+                        <p>More details are coming soon!</p>
 				
 			</form>
 			</div>
