--- a/benchmark.html
+++ b/benchmark.html
@@ -67,7 +67,7 @@
 		<!-- /HEADER -->
 
 		<div class="body-container">
-			<h1>Download</h>
+			<h1>Download</h1>
 
 			<p>More details are coming soon!</p>
 						
