--- a/benchmark.html
+++ b/benchmark.html
@@ -47,9 +47,9 @@
 		</p>
 
 		<p>
-		<sup>1</sup><a href="http://eecs.lassonde.yorku.ca/" target="_blank" rel="noopener">Nanjing University of Science and Technology</a>
+		<sup>1</sup>Nanjing University of Science and Technology
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-		<sup>2</sup><a href="http://eecs.lassonde.yorku.ca/" target="_blank" rel="noopener">Huawei Cloud</a>		
+		<sup>2</sup>Huawei Cloud		
 		</p>
 		
 	</div>
