--- a/benchmark.html
+++ b/benchmark.html
@@ -77,7 +77,7 @@
 
 			<h1>Benchmark Results</h1>
 
-			<h2>Results of mixed training track</h2>
+			<h2>Results of Rain13K benchmark</h2>
 
 			<table id="t01" class="sortable">
 			<tbody>
@@ -360,7 +360,7 @@
 
 
 
-			<h2>Results of independent training track</h2>
+			<h2>Results of Other Benchamrks</h2>
 
 			<table id="t02" class="sortable">
 			<tbody>
@@ -369,9 +369,9 @@
 			<th rowspan="2" onclick="sortTable(event, 't02', 1)">Method</th>
 			<th style="text-align: center;" colspan="2">Rain200L</th>
 			<th style="text-align: center;" colspan="2">Rain200H</th>
-			<th style="text-align: center;" colspan="2">Test1200</th>
-			<th style="text-align: center;" colspan="2">Test1400</th>
-			<th style="text-align: center;" colspan="2">Test1000</th>
+			<th style="text-align: center;" colspan="2">DID-Data</th>
+			<th style="text-align: center;" colspan="2">DDN-Data</th>
+			<th style="text-align: center;" colspan="2">SPA-Data</th>
 			<th style="text-align: center;" colspan="2">Average</th>
 			</tr>
 
@@ -747,128 +747,7 @@
 			</table>
 
 
-			<h2>Results of new benchmark track</h2>
-
-			<table id="t03" class="sortable">
-			<tbody>
-
-			<tr>
-				<th rowspan="2" onclick="sortTable(event, 't03', 2)">Method</th>
-				<th style="text-align: center;" colspan="3">HQ-RAIN</th>
-				<th style="text-align: center;" colspan="3">RE-RAIN</th>
-			</tr>
-	
-				<tr>
-				<th class="sortable desc"   onclick="sortTable(event, 't03', 1)">PSNR</th>
-				<th class="sortable"   onclick="sortTable(event, 't03', 2)">SSIM</th>
-				<th class="sortable"   onclick="sortTable(event, 't03', 3)">LPIPS</th>
-				<th class="sortable"   onclick="sortTable(event, 't03', 4)">NIQE</th>
-				<th class="sortable"   onclick="sortTable(event, 't03', 5)">PIQE</th>
-				<th class="sortable"   onclick="sortTable(event, 't03', 6)">BRISQUE</th>
-			</tr>
-			<tr>
-				<td>Inputs</td>
-				<td>24.06</td>
-				<td>0.7061</td>
-				<td>0.3717</td>
-				<td>5.890</td>
-				<td>13.643</td>
-				<td>30.008</td>
-			</tr>
-			<tr>
-				<td>LPNet</td>
-				<td>31.39</td>
-				<td>0.9203</td>
-				<td>0.1024</td>
-				<td>5.550</td>
-				<td>13.787</td>
-				<td>24.863</td>
-			</tr>
-			<tr>
-				<td>PReNet</td>
-				<td>36.73</td>
-				<td>0.9657</td>
-				<td>0.0350</td>
-				<td>5.619</td>
-				<td>13.324</td>
-				<td>28.180</td>
-			</tr>
-			<tr>
-				<td>JORDER-E</td>
-				<td>36.46</td>
-				<td>0.9599</td>
-				<td>0.0435</td>
-				<td>5.401</td>
-				<td>13.716</td>
-				<td>25.436</td>
-			</tr>
-			<tr>
-				<td>RCDNet</td>
-				<td>39.53</td>
-				<td>0.9771</td>
-				<td>0.0242</td>
-				<td>5.658</td>
-				<td>13.813</td>
-				<td>28.006</td>
-			</tr>
-			<tr>
-				<td>HINet</td>
-				<td>42.30</td>
-				<td>0.9814</td>
-				<td>0.0147</td>
-				<td>5.784</td>
-				<td>13.418</td>
-				<td>29.003</td>
-			</tr>
-			<tr>
-				<td>SPDNet</td>
-				<td>34.02</td>
-				<td>0.9359</td>
-				<td>0.0813</td>
-				<td>5.405</td>
-				<td>14.249</td>
-				<td>26.134</td>
-			</tr>
-			<tr>
-				<td>Uformer</td>
-				<td>37.57</td>
-				<td>0.9673</td>
-				<td>0.0314</td>
-				<td>5.370</td>
-				<td>13.473</td>
-				<td>26.491</td>
-			</tr>
-			<tr>
-				<td>Restormer</td>
-				<td>44.59</td>
-				<td>0.9905</td>
-				<td>0.0076</td>
-				<td>5.864</td>
-				<td>13.623</td>
-				<td>29.725</td>
-			</tr>
-			<tr>
-				<td>IDT</td>
-				<td>38.38</td>
-				<td>0.9737</td>
-				<td>0.0261</td>
-				<td>5.683</td>
-				<td>13.746</td>
-				<td>28.330</td>
-			</tr>
-			<tr>
-				<td>DRSformer</td>
-				<td>44.67</td>
-				<td>0.9898</td>
-				<td>0.0081</td>
-				<td>5.857</td>
-				<td>13.678</td>
-				<td>29.747</td>
-			</tr>
-
-
-			</tbody>
-			</table>
+			
 
 
 
