--- a/benchmark.html
+++ b/benchmark.html
@@ -77,7 +77,7 @@
 
 			<h1>Benchmark Results</h1>
 
-			<h2>Results of Rain13K benchmark</h2>
+			<h2>Results of Rain13k benchmark</h2>
 
 			<table id="t01" class="sortable">
 			<tbody>
@@ -360,7 +360,7 @@
 
 
 
-			<h2>Results of Other Benchamrks</h2>
+			<h2>Results of other benchamrks</h2>
 
 			<table id="t02" class="sortable">
 			<tbody>
