--- a/benchmark.html
+++ b/benchmark.html
@@ -360,7 +360,7 @@
 
 
 
-			<h2>Results of other benchamrks</h2>
+			<h2>Results of other benchmarks</h2>
 
 			<table id="t02" class="sortable">
 			<tbody>
