--- a/survey/index.html
+++ b/survey/index.html
@@ -340,7 +340,7 @@
     Hybrid CNN-Transformer Feature Fusion for Single Image Deraining
    </span>
   <p> 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">AAAI'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ojs.aaai.org/index.php/AAAI/article/view/25111" target="_blank" rel="noopener">AAAI'23</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/HCT-FFN" target="_blank" rel="noopener">HCT-FFN Code</a>
   </p>
  </div>
