--- a/survey/index.html
+++ b/survey/index.html
@@ -1066,7 +1066,7 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
-   DCSFN: Deep Cross-scale Fusion Network for Single Image Rain Removal 
+   Conditional Variational Image Deraining
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/9084254/" target="_blank" rel="noopener">TIP'20</a>
