--- a/survey/index.html
+++ b/survey/index.html
@@ -169,12 +169,14 @@
   
 <!-- publications -->
 <div class="universal-wrapper pt-3">
-  <h1>Related Work</h1> <h3>Last updated: May 26, 2023</h3>
+  <h1>Related Work</h1> <!--<h3>Last updated: May 26, 2023</h3>-->
 </div>
 
+<!--
 <div class="universal-wrapper pt-1">
  <h5>Note: For the following papers on image restoration, we only include the image restoration work validated on the deraining task in their paper. If you would like to add your paper, please contact chenxiang@njust.edu.cn.</h5> 
 </div>
+-->
   
 <div class="universal-wrapper">
   <div class="row">
