--- a/survey/index.html
+++ b/survey/index.html
@@ -1423,7 +1423,7 @@
  </div>
 </div>   
   
-<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
@@ -1431,7 +1431,7 @@
     Clearing the Skies: A Deep Network Architecture for Single-Image Rain Removal
    </span>
   <p> 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/7893758" target="_blank" rel="noopener">CVPR'17</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/7893758" target="_blank" rel="noopener">TIP'17</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://xueyangfu.github.io/projects/tip2017.html" target="_blank" rel="noopener">DerainNet Code</a>
   </p>
  </div>
