--- a/benchmark.html
+++ b/benchmark.html
@@ -72,9 +72,9 @@
 			
 			<a href="submit.html" class="button">Click here to submit your results</a>
 
-			<h1>Benchmark Results</h1>
+			<h1>Leaderboard</h1>
 
-			<h2>Results of Rain13k benchmark</h2>
+			<h2>Results of Mixed Training Track</h2>
 
 			<table id="t01" class="sortable">
 			<tbody>
