--- a/submit.html
+++ b/submit.html
@@ -64,13 +64,23 @@
 			
 		<h1>Upload your results</h1>
 			
-			<p>For information on how to prepare your results, please refer to <b><a href="https://www.eecs.yorku.ca/~kamel/sidd/benchmark.php">the benchmark page</a></b></p>
+			<p>For information on how to prepare your results, please refer to <b><a href="https://www.eecs.yorku.ca/~kamel/sidd/benchmark.php">the benchmark page</a></b>.</p>
 
 			<p>If requestd, your results will appear on the benchmark page soon after you submit your file.</p>
 			
 			<div class="submitForm">
 			<form method="post" enctype="multipart/form-data" action="upload_submission.php">
-                        <p>More details are coming soon!</p>
+			<p>
+			<span class="fieldName">Track: </span> <input type="text" name="method" id="method" class="input" />
+			</p>
+			<p>
+			<span class="fieldName">E-mail: </span> <input type="email" name="email" id="email" class="input" /> Results will be sent to this email.
+			</p>
+			<p><span class="fieldName">Post results? </span> <input type="checkbox" name="post_result" value="yes" /> Check this box if you want your results to be posted on the benchmark page. 
+			</p>
+			<p><span class="fieldName"> </span> <input type="submit" name="submit" value="File to Submit" class="button" />
+			<span id="message" style="color:red;">&nbsp;</span>
+			</p>
 				
 			</form>
 			</div>
