--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</p>
 
 		<p>
-		School of Computer Science and Engineering, Nanjing University of Science and Technology
+		Nanjing University of Science and Technology
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;		
 		</p>
 		
