--- a/submit.html
+++ b/submit.html
@@ -37,15 +37,19 @@
     
     <div class="head-container">
 	<div style="width: 100%; text-align:center;">
-		<h2>Low-Level Vision - Image Deraining</h2>
+		<h2>Towards Unified Deep Image Deraining: A Survey and A New Benchmark</h2>
 		<p>
-		<a href="https://www.eecs.yorku.ca/~kamel/" target="_blank" rel="noopener">Xiang Chen</a><sup>1</sup>
+		<a href="https://cschenxiang.github.io/" target="_blank" rel="noopener">Xiang Chen</a>
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-		<a href="https://www.microsoft.com/en-us/research/people/stevelin/" target="_blank" rel="noopener">Jinshan Pan</a><sup>1</sup>
+		<a href="https://jspan.github.io/" target="_blank" rel="noopener">Jinshan Pan</a>
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		<a href="https://scholar.google.com/citations?user=ruebFVEAAAAJ&hl=en&oi=ao" target="_blank" rel="noopener">Jiangxin Dong</a>
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		<a href="https://scholar.google.com/citations?user=ByBLlEwAAAAJ&hl=en&oi=ao" target="_blank" rel="noopener">Jinhui Tang</a>
 		</p>
 
 		<p>
-		<sup>1</sup>Nanjing University of Science and Technology
+		Nanjing University of Science and Technology
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;		
 		</p>
 		
