--- a/submit.html
+++ b/submit.html
@@ -68,7 +68,7 @@
 			
 		<h1>Upload your results</h1>
 			
-			<p>For information on how to prepare your results, please refer to <b><a href="https://www.eecs.yorku.ca/~kamel/sidd/benchmark.php">the benchmark page</a></b>.</p>
+			<p>For information on how to prepare your results, please refer to <b><a href="benchmark.html">the benchmark page</a></b>.</p>
 
 			<p>If requestd, your results will appear on the benchmark page soon after you submit your file.</p>
 			
