--- a/survey/index.html
+++ b/survey/index.html
@@ -169,14 +169,12 @@
   
 <!-- publications -->
 <div class="universal-wrapper pt-3">
-  <h1>Related Work</h1> <!--<h3>Last updated: May 26, 2023</h3>-->
+  <h1>Related Work</h1> <h3>Last updated: Oct 5, 2023</h3>
 </div>
 
-<!--
 <div class="universal-wrapper pt-1">
  <h5>Note: For the following papers on image restoration, we only include the image restoration work validated on the deraining task in their paper. If you would like to add your paper, please contact chenxiang@njust.edu.cn.</h5> 
 </div>
--->
   
 <div class="universal-wrapper">
   <div class="row">
@@ -238,6 +236,61 @@
 
       <div id="container-publications">
 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Networks are Slacking Off: Understanding Generalization Problem in Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/2305.15134.pdf" target="_blank" rel="noopener">NeurIPS'23</a>
+  </p>
+ </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    From Sky to the Ground: A Large-scale Benchmark and Simple Baseline Towards Real Rain Removal
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/ICCV2023/papers/Guo_From_Sky_to_the_Ground_A_Large-scale_Benchmark_and_Simple_ICCV_2023_paper.pdf" target="_blank" rel="noopener">ICCV'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/yunguo224/LHP-Rain" target="_blank" rel="noopener">LHP-Rain Code</a>
+  </p>
+ </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Sparse Sampling Transformer with Uncertainty-Driven Ranking for Unified Removal of Raindrops and Rain Streaks
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chen_Sparse_Sampling_Transformer_with_Uncertainty-Driven_Ranking_for_Unified_Removal_of_ICCV_2023_paper.pdf" target="_blank" rel="noopener">ICCV'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/Ephemeral182/UDR-S2Former_deraining" target="_blank" rel="noopener">UDR-S2Former Code</a>
+  </p>
+ </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Learning Rain Location Prior for Nighttime Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/ICCV2023/papers/Zhang_Learning_Rain_Location_Prior_for_Nighttime_Deraining_ICCV_2023_paper.pdf" target="_blank" rel="noopener">ICCV'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/zkawfanx/RLP" target="_blank" rel="noopener">RLP Code</a>
+  </p>
+ </div>
+</div> 
 
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
