--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			</ul>
 			
 			<h1>Acknowledgment</h1>
-			<p> Part of the code for this platform borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. Thanks to Caihua Kong (LISTENAI) and Longgang Dai (JINGWEI HIRAIN) for supporting this project.</p>
+			<p> Part of the code for this platform borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. Thanks to Prof. Kui Jiang (HIT), Caihua Kong (LISTENAI) and Longgang Dai (JINGWEI HIRAIN) for supporting this project.</p>
 
 			<h1>License</h1>
 			<p>The all online resources are under the MIT License.</p>
